--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
         const CONFIG = {
             // Replace with your actual GNews API key (https://gnews.io/)
             // If left as default, the app will gracefully fallback to sample data.
+            // API key removed for security reasons
             apiKey: 'Add_Your_GNEWS_API_Key_Here', 
             
             categories: ['General', 'World', 'Technology', 'Business', 'Science', 'Health', 'Entertainment', 'Sports'],
